# parallel-canny

./: .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  canny-bench.cpp
cmake/: Extras.cmake
examples/: CMakeLists.txt  canny_serial.cpp
include/PCanny/: PCanny.hpp
src/: CMakeLists.txt  PCanny.cpp
